# kiss_sdl

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  Makefile  README.md  Readme.md  SDL2_kiss.pc.in  build.xml  custom_rules.xml  kiss_LICENSE  kiss_draw.c  kiss_example.c  kiss_example1.c  kiss_example1.sln  kiss_example1.vcxproj  kiss_example2.c  kiss_example2.sln  kiss_example2.vcxproj  kiss_general.c  kiss_makefile  kiss_posix.c  kiss_sdl.c  kiss_sdl.h  kiss_widgets.c  local.properties
.github/workflows/: codeql-analysis.yml
cmake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
doc/: kiss_makefile
examples/: kiss_example1.c  kiss_example2.c  kiss_example2.vcxproj  whydoiahvetomakeafiletoaddadirgithub.reallywhy
include/SDL2/: SDL_kiss.h
jni/: Application.mk
jni/src/: Android.mk  Makefile  kiss_draw.c  kiss_example1.c  kiss_example2.c  kiss_general.c  kiss_sdl.h  kiss_widgets.c
res/values/: strings.xml
src/: kiss_draw.c  kiss_general.c  kiss_posix.c  kiss_widgets.c
src/org/libsdl/app/: SDLActivity.java
